--- a/index.html
+++ b/index.html
@@ -6,18 +6,36 @@
   <title>Giriş Yap ve Hemen Oyna - SonOyuncu Network</title>
   <meta name="description" content="Türkiye'nin en büyük Minecraft sunucusunda 20'den fazla oyunu ücretsiz olarak hemen oyna!">
   <meta name="keywords" content="sonoyuncu, giriş yap, kayıt ol, minecraft indir, sonoyuncu oyna, minecraft, minigame, skyblock">
+  <link rel="canonical" href="https://sonoyuncu.com.tr/giris-yap">
+  <meta property="og:title" content="SonOyuncu Network">
+  <meta property="og:description" content="Türkiye'nin en büyük Minecraft sunucusunda 20'den fazla oyunu ücretsiz olarak hemen oyna!">
+  <meta property="og:url" content="https://sonoyuncu.com.tr/giris-yap">
+
+  <!-- Stil dosyaları -->
+  <link rel="stylesheet" href="css2">
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="m=el_main_css">
   <link rel="icon" href="icon.png">
 
-  <!-- Stil Dosyası -->
-  <link rel="stylesheet" href="style.css">
+  <!-- JS dosyaları -->
+  <script src="recaptcha__tr.js.indir" defer></script>
+  <script src="app.js.indir" defer></script>
+  <script src="m=el_main" defer></script>
+  <script src="js" defer></script>
+  <script src="api.js.indir" defer></script>
+  <script src="element.js.indir" defer></script>
 
-  <!-- JS Dosyaları -->
-  <script src="app.js" defer></script>
-  <script src="api.js" defer></script>
-  <script src="element.js" defer></script>
+  <!-- Google Tag -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNMXQCZE7S"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', 'G-BNMXQCZE7S');
+  </script>
 </head>
-
 <body style="position: relative; min-height: 100%; top: 0px;">
+
   <style>
     body {
       background-image: url("login-bg.jpg");
@@ -27,7 +45,7 @@
   </style>
 
   <div class="container m-auto flex h-screen items-center justify-center">
-    <div class="w-full max-w-sm shadow-lg bg-white rounded-lg">
+    <div class="w-full max-w-sm  shadow-lg bg-white rounded-lg">
       <div class="bg-orange-500 rounded-t-lg">
         <a href="https://sonoyuncu.com.tr/">
           <img class="m-auto d-block pb-6 pt-6" width="150" src="sonoyuncu-logo-registered.png" alt="">
@@ -36,27 +54,30 @@
 
       <div class="w-full">
         <form class="px-8 pt-6 pb-6" method="POST" action="https://sonoyuncu.com.tr/giris-yap" id="biscolab-recaptcha-invisible-form">
-          <input type="hidden" name="token" value="8a82a4ce3ecef8bded91e4554cf409730ae0262e9fd1ad7310b372b688d313b0">
+          <input type="hidden" name="token" value="your_token_value">
           <h1 class="text-2xl font-semibold">Giriş Yap</h1>
           <p class="text-sm mb-4">SonOyuncu hesabına giriş yap.</p>
 
           <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Oyuncu Adı</label>
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
+              Oyuncu Adı
+            </label>
             <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 form-input" id="username" name="username" type="text" placeholder="Oyuncu Adı" autocomplete="username" required autofocus>
           </div>
 
           <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Şifre</label>
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
+              Şifre
+            </label>
             <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3" name="password" id="password" type="password" placeholder="******************" autocomplete="current-password" required>
           </div>
 
           <div class="flex justify-between items-center">
             <div class="w-1/2">
-              <button class="w-full block text-sm bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded focus:outline-none cursor-pointer focus:shadow-outline">
+              <button class="w-full block text-sm bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded focus:outline-none cursor-pointer focus:shadow-outline g-recaptcha" data-callback="biscolabLaravelReCaptcha" data-sitekey="your_site_key">
                 Giriş Yap
               </button>
             </div>
-
             <a href="https://sonoyuncu.com.tr/sifremi-unuttum" class="align-baseline inline-block font-bold text-gray-400 hover:text-gray-800 text-xs">
               Şifreni mi Unuttun?
             </a>
@@ -66,9 +87,18 @@
             Hesabın Yok mu? Kayıt Ol
           </a>
         </form>
+
+        <!-- Google Translate -->
+        <div class="mt-4 p-4" id="google_translate_element"></div>
+        <script type="text/javascript">
+          function googleTranslateElementInit() {
+            new google.translate.TranslateElement({pageLanguage: 'tr'}, 'google_translate_element');
+          }
+        </script>
+        <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
       </div>
     </div>
   </div>
+
 </body>
 </html>
-
