--- a/index.html
+++ b/index.html
@@ -4,101 +4,65 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Giriş Yap ve Hemen Oyna - SonOyuncu Network</title>
-  <meta name="description" content="Türkiye'nin en büyük Minecraft sunucusunda 20'den fazla oyunu ücretsiz olarak hemen oyna!">
-  <meta name="keywords" content="sonoyuncu, giriş yap, kayıt ol, minecraft indir, sonoyuncu oyna, minecraft, minigame, skyblock">
-  <link rel="canonical" href="https://sonoyuncu.com.tr/giris-yap">
-  <meta property="og:title" content="SonOyuncu Network">
-  <meta property="og:description" content="Türkiye'nin en büyük Minecraft sunucusunda 20'den fazla oyunu ücretsiz olarak hemen oyna!">
-  <meta property="og:url" content="https://sonoyuncu.com.tr/giris-yap">
 
-  <!-- Stil dosyaları -->
-  <link rel="stylesheet" href="css2">
-  <link rel="stylesheet" href="style.css">
-  <link rel="stylesheet" href="m=el_main_css">
-  <link rel="icon" href="icon.png">
+  <!-- ICON -->
+  <link rel="icon" href="img/icon.png">
 
-  <!-- JS dosyaları -->
-  <script src="recaptcha__tr.js.indir" defer></script>
-  <script src="app.js.indir" defer></script>
-  <script src="m=el_main" defer></script>
-  <script src="js" defer></script>
-  <script src="api.js.indir" defer></script>
-  <script src="element.js.indir" defer></script>
+  <!-- STYLES -->
+  <link href="style.css" rel="stylesheet">
+  <link href="assets/css/m=el_main_css.css" rel="stylesheet">
+  <link href="assets/css/styles__ltr.css" rel="stylesheet">
 
-  <!-- Google Tag -->
-  <script async src="https://www.googletagmanager.com/gtag/js?id=G-BNMXQCZE7S"></script>
-  <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-    gtag('config', 'G-BNMXQCZE7S');
-  </script>
-</head>
-<body style="position: relative; min-height: 100%; top: 0px;">
-
+  <!-- GOOGLE FONTS (lokal) -->
   <style>
-    body {
-      background-image: url("login-bg.jpg");
-      background-attachment: fixed;
-      background-size: cover;
+    @font-face {
+      font-family: 'Roboto';
+      src: url('assets/fonts/KFOmCnqEu92Fr1Mu4mxK.woff2') format('woff2');
     }
+    body { font-family: 'Roboto', sans-serif; }
   </style>
 
+  <!-- SCRIPTS -->
+  <script src="api.js" defer></script>
+  <script src="app.js" defer></script>
+</head>
+<body style="background-image: url('img/login-bg.jpg'); background-attachment: fixed; background-size: cover;">
+
   <div class="container m-auto flex h-screen items-center justify-center">
-    <div class="w-full max-w-sm  shadow-lg bg-white rounded-lg">
+    <div class="w-full max-w-sm shadow-lg bg-white rounded-lg">
       <div class="bg-orange-500 rounded-t-lg">
-        <a href="https://sonoyuncu.com.tr/">
-          <img class="m-auto d-block pb-6 pt-6" width="150" src="sonoyuncu-logo-registered.png" alt="">
+        <a href="/">
+          <img class="m-auto d-block pb-6 pt-6" width="150" src="img/logo_48.png" alt="Logo">
         </a>
       </div>
-
       <div class="w-full">
-        <form class="px-8 pt-6 pb-6" method="POST" action="https://sonoyuncu.com.tr/giris-yap" id="biscolab-recaptcha-invisible-form">
-          <input type="hidden" name="token" value="your_token_value">
+        <form class="px-8 pt-6 pb-6" method="POST" action="#" id="login-form">
           <h1 class="text-2xl font-semibold">Giriş Yap</h1>
           <p class="text-sm mb-4">SonOyuncu hesabına giriş yap.</p>
 
           <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">
-              Oyuncu Adı
-            </label>
-            <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 form-input" id="username" name="username" type="text" placeholder="Oyuncu Adı" autocomplete="username" required autofocus>
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="username">Oyuncu Adı</label>
+            <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 form-input" id="username" name="username" type="text" placeholder="Oyuncu Adı" required autofocus>
           </div>
 
           <div class="mb-4">
-            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">
-              Şifre
-            </label>
-            <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3" name="password" id="password" type="password" placeholder="******************" autocomplete="current-password" required>
+            <label class="block text-gray-700 text-sm font-bold mb-2" for="password">Şifre</label>
+            <input class="appearance-none border rounded w-full py-2 px-3 text-gray-700 mb-3" name="password" id="password" type="password" placeholder="********" required>
           </div>
 
           <div class="flex justify-between items-center">
-            <div class="w-1/2">
-              <button class="w-full block text-sm bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded focus:outline-none cursor-pointer focus:shadow-outline g-recaptcha" data-callback="biscolabLaravelReCaptcha" data-sitekey="your_site_key">
-                Giriş Yap
-              </button>
-            </div>
-            <a href="https://sonoyuncu.com.tr/sifremi-unuttum" class="align-baseline inline-block font-bold text-gray-400 hover:text-gray-800 text-xs">
-              Şifreni mi Unuttun?
-            </a>
+            <button class="w-full text-sm bg-orange-500 hover:bg-orange-600 text-white font-bold py-2 px-4 rounded cursor-pointer">Giriş Yap</button>
           </div>
 
-          <a href="https://sonoyuncu.com.tr/kaydol" class="block w-full mt-4 py-3 font-semibold text-center text-sm text-green border hover:border-green-400 rounded">
-            Hesabın Yok mu? Kayıt Ol
-          </a>
+          <a href="#" class="block w-full mt-4 py-3 font-semibold text-center text-sm text-green border hover:border-green-400 rounded">Hesabın Yok mu? Kayıt Ol</a>
         </form>
-
-        <!-- Google Translate -->
-        <div class="mt-4 p-4" id="google_translate_element"></div>
-        <script type="text/javascript">
-          function googleTranslateElementInit() {
-            new google.translate.TranslateElement({pageLanguage: 'tr'}, 'google_translate_element');
-          }
-        </script>
-        <script src="https://translate.google.com/translate_a/element.js?cb=googleTranslateElementInit"></script>
       </div>
     </div>
   </div>
 
+  <!-- GOOGLE TRANSLATE -->
+  <div id="google_translate_element" style="position: absolute; bottom: 10px; right: 10px;">
+    <img src="img/googlelogo_color_42x16dp.png" alt="Google Translate">
+  </div>
 </body>
 </html>
